Fixed issues with Footer
Fixed the issue where the footer would take up extra space on the right

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -56,6 +56,10 @@
   color: #cb0713;
 }
 
+body{
+  font-family: "Lato", sans-serif;
+}
+
 .impactHeaderBackground{
   background-color: #f8f9fa;
 }
